# openrgb-dark

./: .gitignore  LICENSE  README.md  openrgb-dark.service
openrgb-dark-controller/: Cargo.toml
openrgb-dark-controller/protocols/: wlr-output-power-management-unstable-v1.xml
openrgb-dark-controller/src/: main.rs  wayland_dpms.rs
scripts/: test-vm.sh
