[package]
name = "openrgb-dark-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
openrgb2 = "0.3"
zbus = "5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
anyhow = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
wayland-client = "0.31"
wayland-scanner = "0.31"

[[bin]]
name = "openrgb-dark-controller"
path = "src/main.rs"
